# mimiqvisual-python

./: README.md  pyproject.toml
mimiqvisual/: __init__.py
mimiqvisual/assets/: custom.css
