[tool.poetry]
name = "mimiqvisual"
version = "0.1.0"
description = ""
authors = ["Shannon Whitlock <whitlock@unistra.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
ipython = "^8.13.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
